--- a/app/src/main/res/layout/content_input.xml
+++ b/app/src/main/res/layout/content_input.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,21 +33,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/category_edit_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_toStartOf="@+id/create_category"
-                android:hint="カテゴリ"
-                android:visibility="invisible" />
-
             <Spinner
                 android:id="@+id/select_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_toStartOf="@+id/create_category" />
+                android:layout_toStartOf="@+id/create_category"/>
 
             <Button
                 android:id="@+id/create_category"
